syntax = "proto3";

package todo.v1;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/argatu/todo-grpc/proto/todo/v1";

message Task {
    uint64 id = 1;
    string description = 2;
    bool done = 3;
    google.protobuf.Timestamp due_date = 4;
}

message AddTaskRequest {
    string description = 1;
    google.protobuf.Timestamp due_date = 2;
}

message AddTaskResponse {
    uint64 id = 1;
}

message ListTasksRequest {
}

message ListTasksResponse {
    Task task = 1;
    bool overdue = 2;
}

message UpdateTaskRequest {
    Task task = 1;
}

message UpdateTaskResponse {
}

message DeleteTaskRequest {
    uint64 id = 1;
}

message DeleteTaskResponse {
}

service TodoService {
    rpc AddTask(AddTaskRequest) returns (AddTaskResponse);
    rpc ListTasks(ListTasksRequest) returns (stream ListTasksResponse);
    rpc UpdateTasks(stream UpdateTaskRequest) returns (UpdateTaskResponse);
    rpc DeleteTasks(stream DeleteTaskRequest) returns (stream DeleteTaskResponse);
}